==> IOsonata/IOsonata/ARM/Nordic/nRF91/src/uart_nrf91.cpp <==
#include <string.h>
#include <stdio.h>
#include <stdint.h>
#include <stdarg.h>
#include "nrf.h"
#include "istddef.h"
#include "iopinctrl.h"
#include "coredev/uart.h"
#include "interrupt.h"
#include "shared_irq_nrf91.h"
#define NRF91_UART_DMA_MAX_LEN		(0x1FFF)
#define NRF91_UART_BUFF_SIZE		(32)
#define NRF91_UART_CFIFO_SIZE		CFIFO_MEMSIZE(NRF91_UART_BUFF_SIZE)

bool UARTInit(UARTDEV * const pDev, const UARTCFG *pCfg)
{
	// Config I/O pins
	if (pDev == NULL || pCfg == NULL)
	{
		return false;
	}

	if (pCfg->pIOPinMap == NULL || pCfg->NbIOPins <= 0)
	{
		return false;
	}

	if (pCfg->DevNo < 0 || pCfg->DevNo >= s_NbUartDev)
	{
		return false;
	}

	int devno = pCfg->DevNo;

	// Force power on in case it was powered off previously
	*(volatile uint32_t *)((uint32_t)s_nRFUartDev[devno].pReg + 0xFFC);
	*(volatile uint32_t *)((uint32_t)s_nRFUartDev[devno].pReg + 0xFFC) = 1;

	if (pCfg->pRxMem && pCfg->RxMemSize > 0)
	{
		pDev->hRxFifo = CFifoInit(pCfg->pRxMem, pCfg->RxMemSize, 1, pCfg->bFifoBlocking);
	}
	else
	{
		pDev->hRxFifo = CFifoInit(s_nRFUartDev[devno].RxFifoMem, NRF91_UART_CFIFO_SIZE, 1, pCfg->bFifoBlocking);
	}

	if (pCfg->pTxMem && pCfg->TxMemSize > 0)
	{
		pDev->hTxFifo = CFifoInit(pCfg->pTxMem, pCfg->TxMemSize, 1, pCfg->bFifoBlocking);
	}
	else
	{
		pDev->hTxFifo = CFifoInit(s_nRFUartDev[devno].TxFifoMem, NRF91_UART_CFIFO_SIZE, 1, pCfg->bFifoBlocking);
	}

	IOPINCFG *pincfg = (IOPINCFG*)pCfg->pIOPinMap;

	IOPinSet(pincfg[UARTPIN_TX_IDX].PortNo, pincfg[UARTPIN_TX_IDX].PinNo);
	IOPinCfg(pincfg, pCfg->NbIOPins);

	pDev->DevIntrf.pDevData = &s_nRFUartDev[devno];
	s_nRFUartDev[devno].pUartDev = pDev;

	// nRF91 only supports DMA mode
	pDev->DevIntrf.bDma = true;

	s_nRFUartDev[devno].RxPin = (pincfg[UARTPIN_RX_IDX].PinNo & 0x1f) | (pincfg[UARTPIN_RX_IDX].PortNo << 5);
	s_nRFUartDev[devno].TxPin = (pincfg[UARTPIN_TX_IDX].PinNo & 0x1f) | (pincfg[UARTPIN_TX_IDX].PortNo << 5);
	s_nRFUartDev[devno].pReg->PSEL.RXD = s_nRFUartDev[devno].RxPin;
	s_nRFUartDev[devno].pReg->PSEL.TXD = s_nRFUartDev[devno].TxPin;

    // Set baud
    pDev->Rate = nRFUARTSetRate(&pDev->DevIntrf, pCfg->Rate);

    s_nRFUartDev[devno].pReg->CONFIG &= ~(UARTE_CONFIG_PARITY_Msk << UARTE_CONFIG_PARITY_Pos);
	if (pCfg->Parity == UART_PARITY_NONE)
	{
		s_nRFUartDev[devno].pReg->CONFIG |= UARTE_CONFIG_PARITY_Excluded << UARTE_CONFIG_PARITY_Pos;
	}
	else
	{
		s_nRFUartDev[devno].pReg->CONFIG |= UARTE_CONFIG_PARITY_Included << UARTE_CONFIG_PARITY_Pos;
	}

	s_nRFUartDev[devno].pReg->EVENTS_RXDRDY = 0;
	s_nRFUartDev[devno].pReg->EVENTS_TXDRDY = 0;
	s_nRFUartDev[devno].pReg->EVENTS_ERROR = 0;
	s_nRFUartDev[devno].pReg->EVENTS_RXTO = 0;
	s_nRFUartDev[devno].pReg->ERRORSRC = NRF_UARTE0_S->ERRORSRC;
	s_nRFUartDev[devno].pReg->EVENTS_CTS = 0;

	s_nRFUartDev[devno].pReg->EVENTS_RXSTARTED = 0;
	s_nRFUartDev[devno].pReg->EVENTS_TXSTARTED = 0;
	s_nRFUartDev[devno].pReg->EVENTS_TXSTOPPED = 0;

    if (pCfg->FlowControl == UART_FLWCTRL_HW)
	{
    	s_nRFUartDev[devno].pReg->CONFIG |= (UARTE_CONFIG_HWFC_Enabled << UARTE_CONFIG_HWFC_Pos);
    	s_nRFUartDev[devno].CtsPin = (pincfg[UARTPIN_CTS_IDX].PinNo & 0x1f) | (pincfg[UARTPIN_CTS_IDX].PortNo << 5);
    	s_nRFUartDev[devno].RtsPin = (pincfg[UARTPIN_RTS_IDX].PinNo & 0x1f) | (pincfg[UARTPIN_RTS_IDX].PortNo << 5);
    	s_nRFUartDev[devno].pReg->PSEL.CTS = s_nRFUartDev[devno].CtsPin;
    	s_nRFUartDev[devno].pReg->PSEL.RTS = s_nRFUartDev[devno].RtsPin;
		NRF_P0_S->OUTCLR = (1 << pincfg[UARTPIN_CTS_IDX].PinNo);
		NRF_P0_S->OUTCLR = (1 << pincfg[UARTPIN_RTS_IDX].PinNo);
	}
	else
	{
		s_nRFUartDev[devno].pReg->CONFIG &= ~(UARTE_CONFIG_HWFC_Enabled << UARTE_CONFIG_HWFC_Pos);
		s_nRFUartDev[devno].pReg->PSEL.RTS = -1;
		s_nRFUartDev[devno].pReg->PSEL.CTS = -1;
		s_nRFUartDev[devno].CtsPin = -1;
		s_nRFUartDev[devno].RtsPin = -1;
	}


	s_nRFUartDev[devno].pUartDev->bRxReady = false;
	s_nRFUartDev[devno].pUartDev->bTxReady = true;
	s_nRFUartDev[devno].pUartDev->RxOvrErrCnt = 0;
	s_nRFUartDev[devno].pUartDev->ParErrCnt = 0;
	s_nRFUartDev[devno].pUartDev->FramErrCnt = 0;
	s_nRFUartDev[devno].pUartDev->RxDropCnt = 0;
	s_nRFUartDev[devno].pUartDev->TxDropCnt = 0;

	pDev->DevIntrf.Type = DEVINTRF_TYPE_UART;
	pDev->DataBits = pCfg->DataBits;
	pDev->FlowControl = pCfg->FlowControl;
	pDev->StopBits = pCfg->StopBits;
	pDev->bIrDAFixPulse = pCfg->bIrDAFixPulse;
	pDev->bIrDAInvert = pCfg->bIrDAInvert;
	pDev->bIrDAMode = pCfg->bIrDAMode;
	pDev->IrDAPulseDiv = pCfg->IrDAPulseDiv;
	pDev->Parity = pCfg->Parity;
	pDev->bIntMode = pCfg->bIntMode;
	pDev->EvtCallback = pCfg->EvtCallback;
	pDev->DevIntrf.Disable = nRFUARTDisable;
	pDev->DevIntrf.Enable = nRFUARTEnable;
	pDev->DevIntrf.GetRate = nRFUARTGetRate;
	pDev->DevIntrf.SetRate = nRFUARTSetRate;
	pDev->DevIntrf.StartRx = nRFUARTStartRx;
	pDev->DevIntrf.RxData = nRFUARTRxData;
	pDev->DevIntrf.StopRx = nRFUARTStopRx;
	pDev->DevIntrf.StartTx = nRFUARTStartTx;
	pDev->DevIntrf.TxData = nRFUARTTxData;
	pDev->DevIntrf.StopTx = nRFUARTStopTx;
	pDev->DevIntrf.MaxRetry = UART_RETRY_MAX;
	pDev->DevIntrf.PowerOff = nRFUARTPowerOff;
	pDev->DevIntrf.EnCnt = 1;
	atomic_flag_clear(&pDev->DevIntrf.bBusy);

	apply_workaround_for_enable_anomaly(&s_nRFUartDev[devno]);

	s_nRFUartDev[devno].pReg->ENABLE = (UARTE_ENABLE_ENABLE_Enabled << UARTE_ENABLE_ENABLE_Pos);

	// We need to transfer only 1 byte at a time for Rx. Otherwise, it will not interrupt
	// until buffer is filled. It will be blocked.
	// The RX timeout logic of the nRF series is implemented wrong. We cannot use it.
	s_nRFUartDev[devno].pReg->RXD.MAXCNT = 1;
	s_nRFUartDev[devno].pReg->RXD.PTR = (uint32_t)&s_nRFUartDev[devno].RxDmaCache;

	s_nRFUartDev[devno].pReg->EVENTS_ENDRX = 0;
	s_nRFUartDev[devno].pReg->TASKS_STARTRX = 1;
//	s_nRFUartDev[devno].pReg->TASKS_STARTTX = 1;

    s_nRFUartDev[devno].pReg->INTENCLR = 0xffffffffUL;

	if (pCfg->bIntMode)
	{
		SetSharedIntHandler(pCfg->DevNo, &pDev->DevIntrf, UartIrqHandler);

		s_nRFUartDev[devno].pReg->INTENSET = (UARTE_INTENSET_RXDRDY_Set << UARTE_INTENSET_RXDRDY_Pos) |
							  (UARTE_INTENSET_RXTO_Set << UARTE_INTENSET_RXTO_Pos) |
							  (UARTE_INTENSET_TXDRDY_Set << UARTE_INTENSET_TXDRDY_Pos) |
							  (UARTE_INTENSET_ERROR_Set << UARTE_INTENSET_ERROR_Pos) |
							  (UARTE_INTENSET_CTS_Set << UARTE_INTENSET_CTS_Pos) |
							  (UARTE_INTENSET_NCTS_Set << UARTE_INTENSET_NCTS_Pos) |
							  (UARTE_INTENSET_ENDTX_Set << UARTE_INTENSET_ENDTX_Pos) |
							  (UARTE_INTENSET_ENDRX_Set << UARTE_INTENSET_ENDRX_Pos);

		switch (devno)
		{
			case 0:
				NVIC_ClearPendingIRQ(UARTE0_SPIM0_SPIS0_TWIM0_TWIS0_IRQn);
				NVIC_SetPriority(UARTE0_SPIM0_SPIS0_TWIM0_TWIS0_IRQn, pCfg->IntPrio);
				NVIC_EnableIRQ(UARTE0_SPIM0_SPIS0_TWIM0_TWIS0_IRQn);
				break;
			case 1:
				NVIC_ClearPendingIRQ(UARTE1_SPIM1_SPIS1_TWIM1_TWIS1_IRQn);
				NVIC_SetPriority(UARTE1_SPIM1_SPIS1_TWIM1_TWIS1_IRQn, pCfg->IntPrio);
				NVIC_EnableIRQ(UARTE1_SPIM1_SPIS1_TWIM1_TWIS1_IRQn);
				break;
			case 2:
				NVIC_ClearPendingIRQ(UARTE2_SPIM2_SPIS2_TWIM2_TWIS2_IRQn);
				NVIC_SetPriority(UARTE2_SPIM2_SPIS2_TWIM2_TWIS2_IRQn, pCfg->IntPrio);
				NVIC_EnableIRQ(UARTE2_SPIM2_SPIS2_TWIM2_TWIS2_IRQn);
				break;
			case 3:
				NVIC_ClearPendingIRQ(UARTE3_SPIM3_SPIS3_TWIM3_TWIS3_IRQn);
				NVIC_SetPriority(UARTE3_SPIM3_SPIS3_TWIM3_TWIS3_IRQn, pCfg->IntPrio);
				NVIC_EnableIRQ(UARTE3_SPIM3_SPIS3_TWIM3_TWIS3_IRQn);
				break;
        }
    }

	return true;
}

UARTDEV * const UARTGetInstance(int DevNo)
{
	return s_nRFUartDev[DevNo].pUartDev;
}
